--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>https://discord.gg/nTZ2aUgbkj</title>
+        <title>https://discord.gg/qxcNVYqtqF</title>
         <style>
             body {
                 margin: 0;
@@ -174,14 +174,14 @@
             <div class="image-container">
                 <img src="" alt="">
             </div>
-            <!-- نص "discord.gg/d-7H" -->
-            <div class="text">https://discord.gg/nTZ2aUgbkj</div>
+            <!-- نص "https://discord.gg/qxcNVYqtqF" -->
+            <div class="text">https://discord.gg/qxcNVYqtqF</div>
             <!-- معلومات الIP مع البورت -->
             <div class="info" id="ip-info">Loading IP Info...</div>
             <!-- شريط النص المتحرك داخل الفيديو الثاني -->
             <div class="marquee-container">
                 <div class="marquee">
-                    <span>inst z9ddr - العم ابو الديفد - https://discord.gg/nTZ2aUgbkj
+                    <span>inst z9ddr - العم ابو الديفد - https://discord.gg/qxcNVYqtqF
 
             </span>
                 </div>
